# Library-System

./: .gitignore  README.md
backend/: .gitignore  CMakeLists.txt
backend/main/: book.cpp  libraryService.cpp  main.cpp  user.cpp
frontend/: package.json  tsconfig.json
frontend/src/: api.js
ml/: main.py
